--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.12.0
 aiodns==4.0.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
@@ -27,11 +28,14 @@ fastapi-cloud-cli==0.13.0
 fastar==0.8.0
 filelock==3.24.3
 frozenlist==1.8.0
+fsspec==2026.2.0
 google-play-scraper==1.2.7
 h11==0.16.0
+hf-xet==1.2.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
+huggingface_hub==1.4.1
 idna==3.11
 inquirerpy==0.3.4
 invoke==2.2.1
@@ -42,16 +46,20 @@ joblib==1.5.3
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.7.1
+networkx==3.6.1
 nltk==3.9.2
 numpy==2.4.2
 ollama==0.6.1
+packaging==26.0
 pandas==3.0.1
 paramiko==4.0.0
 pfzy==0.3.4
 prettytable==3.17.0
 prompt_toolkit==3.0.52
 propcache==0.4.1
+psutil==7.2.2
 py-cpuinfo==9.0.0
 pycares==5.0.1
 pycparser==3.0
@@ -72,15 +80,22 @@ rich-toolkit==0.19.4
 rignore==0.7.6
 runpod==1.8.1
 s3transfer==0.16.0
+safetensors==0.7.0
 sentry-sdk==2.53.0
+setuptools==82.0.0
 shellingham==1.5.4
 six==1.17.0
 starlette==0.52.1
+sympy==1.14.0
+tokenizers==0.22.2
 tomli==2.4.0
 tomlkit==0.14.0
+torch==2.10.0
 tqdm==4.67.3
 tqdm-loggable==0.3
+transformers==5.2.0
 typer==0.24.1
+typer-slim==0.24.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
